# winappCli

./: .gitattributes  .gitignore  AGENTS.md  README.md  llms.txt  plugin.json
.config/guardian/: .gdnbaselines
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release.yml
.github/actions/collect-metrics/: action.yml
.github/actions/report-metrics/: action.yml
.github/plugin/: plugin.json
.github/plugin/agents/: winapp.agent.md
.github/skills/: README.md
.github/skills/pr-review/: SKILL.md
.github/skills/pr-review/dimensions/: _shared-contract.md  alternative-solution.md  cli-ux.md  correctness.md  docs-and-samples.md  multi-model.md  packaging.md  security.md  test-coverage.md
.github/workflows/: build-package.yml  pr-description.yml  test-samples.yml
.pipelines/: release.yml
.pipelines/templates/: build.yaml
docs/: cli-schema.json  debugging.md  dotnet-run-support.md  llm-context.md  npm-usage.md  ui-automation.md  usage.md  using-with-llms.md
docs/fragments/: node-commands.md
docs/fragments/skills/winapp-cli/: frameworks.md  identity.md  manifest.md  package.md  setup.md  signing.md  troubleshoot.md  ui-automation.md
docs/guides/: cpp.md  dotnet.md  flutter.md  packaging-cli.md  rust.md  shell-completion.md  tauri.md
docs/guides/electron/: cpp-notification-addon.md  packaging.md  phi-silica-addon.md  setup.md  winml-addon.md
samples/: SampleTestHelpers.psm1
samples/cpp-app/: CMakeLists.txt  README.md  appxmanifest.xml  test.Tests.ps1
samples/cpp-app-winui/: .gitignore  CMakeLists.txt  README.md  appxmanifest.xml  main.cpp
samples/dotnet-app/: README.md  appxmanifest.xml  dotnet-app.csproj  test.Tests.ps1
samples/electron/: Directory.packages.props  README.md  appxmanifest.xml  package-lock.json  package.json  test.Tests.ps1  winapp.yaml
samples/electron-winml/: README.md  package-lock.json  package.json
samples/electron/addon/: binding.gyp
samples/electron/csAddon/: csAddon.csproj
samples/flutter-app/: README.md  test.Tests.ps1  winapp.yaml
samples/flutter-app/lib/: main.dart
samples/flutter-app/windows/runner/: winapp_sdk_plugin.cpp
samples/packaging-cli/: test.Tests.ps1
samples/rust-app/: Cargo.toml  README.md  appxmanifest.xml  test.Tests.ps1
samples/tauri-app/: README.md  package.json  test.Tests.ps1
samples/tauri-app/src-tauri/: Cargo.toml
samples/winui-app/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  winui-app.csproj
samples/wpf-app/: MainWindow.xaml  MainWindow.xaml.cs  README.md  test.Tests.ps1  wpf-app.csproj
scripts/: build-cli.ps1  generate-llm-docs.ps1  generate-release-notes.ps1  package-msix.ps1  package-npm.ps1  package-nuget.ps1  package-vsc.ps1  setup-winapprun.ps1  start-release.ps1  test-e2e-electron.ps1  test-e2e-winui-ui.ps1  test-samples.ps1  validate-llm-docs.ps1
scripts/assets/: llm-context-footer.md
scripts/msix-assets/: install-msix.ps1
src/winapp-CLI/: Directory.Packages.props
src/winapp-CLI/WinApp.Cli/: NativeMethods.txt  Program.cs  WinApp.Cli.csproj  app.manifest
src/winapp-CLI/WinApp.Cli.Tests/: AgentEnvironmentDetectorTests.cs  AppLauncherServiceTests.cs  AppxManifestDocumentTests.cs  BaseCommandTests.cs  BuildToolsServiceTests.cs  CertGenerateCommandTests.cs  CertInfoCommandTests.cs  CliSchemaTests.cs  CodeIntegrityCatalogServiceTests.cs  CompleteCommandTests.cs  CrashDumpServiceTests.cs  CreateExternalCatalogCommandTests.cs  CustomHelpTests.cs  DirectoryPackagesServiceTests.cs  DotNetServiceTests.cs  EndToEndTests.cs  FakeAppLauncherService.cs  FakeCrashDumpService.cs  FakeDebugOutputService.cs  FakeDotNetService.cs  FakeMsixService.cs  FakeNugetService.cs  FakePackageRegistrationService.cs  FakePowerShellService.cs  FakeUiServices.cs  GetWinappPathCommandTests.cs  GlobalTestSetup.cs  IncrementalCopyHelperTests.cs  InitCommandTests.cs  LongPathHelperTests.cs  ManifestAddAliasCommandTests.cs  ManifestCommandTests.cs  ManifestUpdateAssetsCommandTests.cs  MrtAssetHelperTests.cs  MsixServiceTests.cs  MsixServiceWinAppSdkResolutionTests.cs  NewCommandTests.cs  NugetServiceTests.cs  OptionTypoValidatorTests.cs  PackageCommandTests.cs  (+11 more)
src/winapp-CLI/WinApp.Cli.Tests/TestApps/cpp-winui-crash-app/: .gitignore  CMakeLists.txt  README.md  app.manifest  appxmanifest.xml  main.cpp  winapp.yaml
src/winapp-CLI/WinApp.Cli/Commands/: CertCommand.cs  CertGenerateCommand.cs  CertInfoCommand.cs  CertInstallCommand.cs  CompleteCommand.cs  CreateDebugIdentityCommand.cs  CreateExternalCatalogCommand.cs  GetWinappPathCommand.cs  InitCommand.cs  ManifestAddAliasCommand.cs  ManifestCommand.cs  ManifestGenerateCommand.cs  ManifestUpdateAssetsCommand.cs  NewCommand.cs  PackageCommand.cs  RunCommand.cs  SharedUiOptions.cs  SignCommand.cs  UiClickCommand.cs  UiCommand.cs  UiFocusCommand.cs  UiGetFocusedCommand.cs  UiGetPropertyCommand.cs  UiGetValueCommand.cs  UiInspectCommand.cs  UiInvokeCommand.cs  UiListWindowsCommand.cs  UiScreenshotCommand.cs  UiScrollCommand.cs  UiScrollIntoViewCommand.cs  UiSearchCommand.cs  UiSetValueCommand.cs  UiStatusCommand.cs  UiWaitForCommand.cs  UnregisterCommand.cs  UpdateCommand.cs  WinAppRootCommand.cs
src/winapp-CLI/WinApp.Cli/ConsoleTasks/: GroupableTask.cs  PromptConfirmationTask.cs  StatusMessageTask.cs  TaskContext.cs
src/winapp-CLI/WinApp.Cli/Helpers/: BannerHelper.cs  CliSchema.cs  HostBuilderExtensions.cs  (+10 more)
src/winapp-NuGet/: Microsoft.Windows.SDK.BuildTools.WinApp.csproj  README.md
src/winapp-VSC/: .vscodeignore  README.md  esbuild.mjs  package-lock.json  package.json
src/winapp-VSC/src/: extension.ts  winapp-cli-utils.ts
src/winapp-npm/: .prettierignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
src/winapp-npm/addon-template/: binding.gyp
src/winapp-npm/cs-addon-template/: AddonTemplate.csproj.template  Directory.packages.props.template
src/winapp-npm/scripts/: generate-commands.mjs  generate-docs.mjs
src/winapp-npm/src/: cli.ts  cpp-addon-utils.ts  cs-addon-utils.ts  index.ts  msix-utils.ts  winapp-cli-utils.ts  winapp-commands.ts
(+91 files in other folders)
